# realsense_mp_pose

./: .gitignore
arm_moveit_config/: .setup_assistant  package.xml
arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  upper_arm.ros2_control.xacro  upper_arm.srdf  upper_arm.urdf.xacro
arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ik_solver_moveit/: CMakeLists.txt  package.xml
ik_solver_moveit/src/: ik_solver.cpp
image_pose_tracking/: package.xml  setup.cfg  setup.py
image_pose_tracking/config/: right_arm.rviz  right_arm.urdf  right_arm.xacro  right_arm_baseline.urdf  right_arm_red.urdf
image_pose_tracking/image_pose_tracking/: arm_solver_forward.py  mediapipe_kp.py  pointcloud_extraction.py  pose_tracking.py
joint_velocity_estimation/: CMakeLists.txt  package.xml
joint_velocity_estimation/config/: joint_velocity_config.yaml
joint_velocity_estimation/src/: joint_velocity_estimator.cpp
pose_optimization/: CMakeLists.txt  package.xml
pose_optimization/config/: ee2hand.yaml  parameters.yaml
pose_optimization/include/pose_optimization/: optimizer.hpp
pose_optimization/src/: main.cpp  optimizer.cpp
